--- a/src/it-spa.scss
+++ b/src/it-spa.scss
@@ -4,6 +4,8 @@ $break-large: 1200px;
 
 body{
     background-image: url(https://images.unsplash.com/photo-1517646450441-a0faf4152caf?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1634&q=80);
+background-repeat: no-repeat;
+background-position: right top;
 }
 
 h1{
